Add Proxies Support

--- a/io/Scan.ipynb
+++ b/io/Scan.ipynb
@@ -7,9 +7,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from tenable.io import TenableIO\n",
     "from pprint import pprint\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from requests import Session\n",
+    "session = Session()\n",
+    "session.verify = False"
    ]
   },
   {
@@ -29,15 +32,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tenable.io import TenableIO\n",
+    "\n",
     "from tenable_authen import TenableAuthentication\n",
+    "\n",
     "credential = TenableAuthentication().getCredential()\n",
     "\n",
     "TIO_ACCESS_KEY = credential[\"TENABLE_ACCESSKEY\"]\n",
     "TIO_SECRET_KEY = credential[\"TENABLE_SECRETKEY\"]\n",
     "\n",
-    "tenableIO = TenableIO(TIO_ACCESS_KEY, TIO_SECRET_KEY)\n",
+    "PROXIES_HTTPS =  TenableAuthentication().getProxies()\n",
     "\n",
-    "del credential, TIO_ACCESS_KEY, TIO_SECRET_KEY"
+    "PROXIES = {\n",
+    "    \"https\": PROXIES_HTTPS\n",
+    "}\n",
+    "\n",
+    "tenableIO = TenableIO(TIO_ACCESS_KEY, TIO_SECRET_KEY, session=session, proxies=PROXIES)\n",
+    "\n",
+    "# del credential, TIO_ACCESS_KEY, TIO_SECRET_KEY"
    ]
   },
   {
@@ -98,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scan_id=44"
+    "scan_id=73"
    ]
   },
   {
@@ -144,7 +156,7 @@
    },
    "outputs": [],
    "source": [
-    "scan_id=44"
+    "scan_id=73"
    ]
   },
   {
@@ -186,8 +198,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scan_id=44\n",
-    "history_uuid=\"3f1e276b-f5c3-4ffc-b870-39e11edabcd5\""
+    "scan_id=73\n",
+    "history_uuid=\"1cc4791c-f21c-47ac-b96c-85xxxxxxxf42\""
    ]
   },
   {
@@ -228,10 +240,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def createNewScan(name=\"\", targets=[], credentials={}, template=None, compliance=None):\n",
+    "def createNewScan(name=\"\", targets=[], credentials=None, scanner=None, template=None, compliance=None):\n",
     "    return tenableIO.scans.create(name=name,\n",
     "                                  targets=targets,\n",
     "                                  credentials=credentials,\n",
+    "                                  scanner=scanner,\n",
     "                                  template=template,\n",
     "                                  compliance=compliance\n",
     "                                 )"
@@ -249,6 +262,8 @@
     "credentials={'Host': {'SSH': [{'id': 'CREDENTIAL-UUID'}]}}\n",
     "# credentials={'Host': {'Windows': [{'domain': '', 'username': 'Administrator', 'password': 'sekretsquirrel', 'auth_method': 'Password'}]}}\n",
     "\n",
+    "scanner = \"\"\n",
+    "\n",
     "template = None\n",
     "compliance = {}\n"
    ]
@@ -259,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "createNewScan(name=name, targets=targets, credentials=credentials, template=template, compliance=compliance)"
+    "createNewScan(name=name, targets=targets, credentials=credentials, scanner=scanner, template=template, compliance=compliance)"
    ]
   },
   {
@@ -398,7 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scan_id=44\n",
+    "scan_id=165\n",
     "history_id=None\n",
     "history_uuid=None"
    ]
@@ -410,7 +425,7 @@
    "outputs": [],
    "source": [
     "scanResult = getScansResult(scan_id=scan_id, history_id=history_id, history_uuid=history_uuid)\n",
-    "scanResult"
+    "scanResult.keys()"
    ]
   },
   {
@@ -437,7 +452,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(scanResult[\"vulnerabilities\"])"
+    "scanResult_df = pd.DataFrame(scanResult[\"vulnerabilities\"])\n",
+    "scanResult_df.sort_values(\"plugin_id\")\n",
+    "# scanResult_df[scanResult_df[\"severity\"]>0]"
    ]
   },
   {
@@ -455,7 +472,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(scanResult[\"compliance\"])"
+    "compliance = pd.DataFrame(scanResult[\"compliance\"])\n",
+    "compliance#[[\"plugin_name\"]]\n",
+    "\n",
+    "# compliance[[\"plugin_name\"]].to_csv(\"compliance.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scanResult[\"compliance\"]"
    ]
   },
   {
@@ -496,7 +525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Export the scan report."
+    "## Export Report "
    ]
   },
   {
@@ -505,9 +534,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def exportScansReport(scan_id=\"\", history_id=None):\n",
-    "    with open('ScansReport.csv', 'wb') as reportobj:\n",
-    "        tenableIO.scans.export(scan_id=scan_id, history_id=history_id, format=\"csv\", fobj=reportobj)"
+    "import requests\n",
+    "\n",
+    "url = f\"https://cloud.tenable.com/scans/{scan_id}/export\"\n",
+    "\n",
+    "payload = {\"format\": \"csv\"}\n",
+    "\n",
+    "headers = {\n",
+    "    \"accept\": \"application/json\",\n",
+    "    \"content-type\": \"application/json\",\n",
+    "    \"X-ApiKeys\": f\"accessKey={TIO_ACCESS_KEY};secretKey={TIO_SECRET_KEY}\"\n",
+    "}\n",
+    "\n",
+    "response = requests.post(url, json=payload, headers=headers, proxies=PROXIES)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    file_id = response.json()\n",
+    "    file_id = file_id[\"file\"]\n",
+    "    print(file_id)\n"
    ]
   },
   {
@@ -516,8 +560,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scan_id=44\n",
-    "history_id=None"
+    "url = f\"https://cloud.tenable.com/scans/{scan_id}/export/{file_id}/status\"\n",
+    "\n",
+    "headers = {\n",
+    "    \"accept\": \"application/json\",\n",
+    "    \"X-ApiKeys\": f\"accessKey={TIO_ACCESS_KEY};secretKey={TIO_SECRET_KEY}\"\n",
+    "}\n",
+    "\n",
+    "response = requests.get(url, headers=headers, proxies=PROXIES)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    res = response.json()\n",
+    "    print(res[\"status\"])"
    ]
   },
   {
@@ -526,8 +580,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exportScansReport(scan_id=scan_id, history_id=history_id)"
+    "url = f\"https://cloud.tenable.com/scans/{scan_id}/export/{file_id}/download\"\n",
+    "\n",
+    "headers = {\n",
+    "    \"accept\": \"application/octet-stream\",\n",
+    "    \"X-ApiKeys\": f\"accessKey={TIO_ACCESS_KEY};secretKey={TIO_SECRET_KEY}\"\n",
+    "}\n",
+    "\n",
+    "response = requests.get(url, headers=headers, proxies=PROXIES)\n",
+    "res = response.text"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from io import StringIO\n",
+    "\n",
+    "pd.read_csv(StringIO(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -539,14 +619,40 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Export the scan report."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def exportScansReport(scan_id=\"\", history_id=None):\n",
+    "    with open('outputs/ScansReport.csv', 'wb') as reportobj:\n",
+    "        tenableIO.scans.export(scan_id=scan_id, history_id=history_id, format=\"csv\", fobj=reportobj)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scan_id=165\n",
+    "history_id=None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exportScansReport(scan_id=scan_id, history_id=history_id)"
+   ]
   },
   {
    "cell_type": "code",
