--- a/io/Policies.ipynb
+++ b/io/Policies.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from tenable.io import TenableIO\n",
     "from pprint import pprint\n",
     "import pandas as pd\n",
     "\n",
@@ -32,8 +33,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tenable.io import TenableIO\n",
-    "\n",
     "from tenable_authen import TenableAuthentication\n",
     "credential = TenableAuthentication().getCredential()\n",
     "\n",
@@ -41,6 +40,7 @@
     "TIO_SECRET_KEY = credential[\"TENABLE_SECRETKEY\"]\n",
     "\n",
     "PROXIES_HTTPS =  TenableAuthentication().getProxies()\n",
+    "\n",
     "PROXIES = {\n",
     "    \"https\": PROXIES_HTTPS\n",
     "}\n",
@@ -54,14 +54,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://pytenable.readthedocs.io/en/stable/api/io/access_groups_v2.html"
+    "## Retrieve the list the policies."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getlistOfPolicies():\n",
+    "    return tenableIO.policies.list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "policies = pd.DataFrame(getlistOfPolicies())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policies[policies[\"name\"].str.contains(\"AIX\", regex=False)]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get the listing of configured access groups"
+    "## Retrieve The Policy details by specific PolicyID."
    ]
   },
   {
@@ -70,8 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getAccessGroupsList(filters=None):\n",
-    "    return tenableIO.access_groups_v2.list(filters=filters)"
+    "def getPolicieDetailsByPolicyID(PolicyID):\n",
+    "    return tenableIO.policies.details(PolicyID)"
    ]
   },
   {
@@ -80,17 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filters=() # ('name', 'nmatch', 'win')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for group in getAccessGroupsList():\n",
-    "    pprint(group)"
+    "PolicyID = \"130\"\n",
+    "getPolicieDetailsByPolicyID(PolicyID)"
    ]
   },
   {
@@ -103,37 +124,47 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Retrieves the details of the specified access group."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def getAccessGroupsDetail(accessGroupId=\"\"):\n",
-    "    return tenableIO.access_groups_v2.details(group_id=accessGroupId)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "accessGroupId=\"f1b49c71-4490-47e8-a824-cxxxxxxxxfd1\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "getAccessGroupsDetail(accessGroupId=accessGroupId)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -160,11 +191,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "9650cb4e16cdd4a8e8e2d128bf38d875813998db22a3c986335f89e0cb4d7bb2"
-   }
   }
  },
  "nbformat": 4,
