--- a/io/Access Groups v2.ipynb
+++ b/io/Access Groups v2.ipynb
@@ -41,13 +41,14 @@
     "TIO_SECRET_KEY = credential[\"TENABLE_SECRETKEY\"]\n",
     "\n",
     "PROXIES_HTTPS =  TenableAuthentication().getProxies()\n",
+    "\n",
     "PROXIES = {\n",
     "    \"https\": PROXIES_HTTPS\n",
     "}\n",
     "\n",
     "tenableIO = TenableIO(TIO_ACCESS_KEY, TIO_SECRET_KEY, session=session, proxies=PROXIES)\n",
     "\n",
-    "del credential, TIO_ACCESS_KEY, TIO_SECRET_KEY"
+    "# del credential, TIO_ACCESS_KEY, TIO_SECRET_KEY"
    ]
   },
   {
@@ -159,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
