--- a/io/Users.ipynb
+++ b/io/Users.ipynb
@@ -7,7 +7,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from tenable.io import TenableIO"
+    "from pprint import pprint\n",
+    "import pandas as pd\n",
+    "\n",
+    "from requests import Session\n",
+    "session = Session()\n",
+    "session.verify = False"
    ]
   },
   {
@@ -27,15 +32,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tenable.io import TenableIO\n",
+    "\n",
     "from tenable_authen import TenableAuthentication\n",
     "credential = TenableAuthentication().getCredential()\n",
     "\n",
     "TIO_ACCESS_KEY = credential[\"TENABLE_ACCESSKEY\"]\n",
     "TIO_SECRET_KEY = credential[\"TENABLE_SECRETKEY\"]\n",
     "\n",
-    "tenableIO = TenableIO(TIO_ACCESS_KEY, TIO_SECRET_KEY)\n",
+    "PROXIES_HTTPS =  TenableAuthentication().getProxies()\n",
     "\n",
-    "del credential, TIO_ACCESS_KEY, TIO_SECRET_KEY"
+    "PROXIES = {\n",
+    "    \"https\": PROXIES_HTTPS\n",
+    "}\n",
+    "\n",
+    "tenableIO = TenableIO(TIO_ACCESS_KEY, TIO_SECRET_KEY, session=session, proxies=PROXIES)\n",
+    "\n",
+    "# del credential, TIO_ACCESS_KEY, TIO_SECRET_KEY"
    ]
   },
   {
@@ -217,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "userId = int(users[2][\"id\"])\n",
+    "userId = int(users[-1][\"id\"])\n",
     "# userId"
    ]
   },
@@ -255,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
